; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_zfs_vnops.c_zfs_getsecattr.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_zfs_vnops.c_zfs_getsecattr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }

@ATTR_NOACLCHECK = common dso_local global i32 0, align 4
@B_TRUE = common dso_local global i32 0, align 4
@B_FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zfs_getsecattr(%struct.inode* %0, i32* %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.inode*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %13 = load %struct.inode*, %struct.inode** %5, align 8
  %14 = call i32* @ITOZ(%struct.inode* %13)
  store i32* %14, i32** %9, align 8
  %15 = load %struct.inode*, %struct.inode** %5, align 8
  %16 = call i32* @ITOZSB(%struct.inode* %15)
  store i32* %16, i32** %10, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* @ATTR_NOACLCHECK, align 4
  %19 = and i32 %17, %18
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %4
  %22 = load i32, i32* @B_TRUE, align 4
  br label %25

23:                                               ; preds = %4
  %24 = load i32, i32* @B_FALSE, align 4
  br label %25

25:                                               ; preds = %23, %21
  %26 = phi i32 [ %22, %21 ], [ %24, %23 ]
  store i32 %26, i32* %12, align 4
  %27 = load i32*, i32** %10, align 8
  %28 = call i32 @ZFS_ENTER(i32* %27)
  %29 = load i32*, i32** %9, align 8
  %30 = call i32 @ZFS_VERIFY_ZP(i32* %29)
  %31 = load i32*, i32** %9, align 8
  %32 = load i32*, i32** %6, align 8
  %33 = load i32, i32* %12, align 4
  %34 = load i32*, i32** %8, align 8
  %35 = call i32 @zfs_getacl(i32* %31, i32* %32, i32 %33, i32* %34)
  store i32 %35, i32* %11, align 4
  %36 = load i32*, i32** %10, align 8
  %37 = call i32 @ZFS_EXIT(i32* %36)
  %38 = load i32, i32* %11, align 4
  ret i32 %38
}

declare dso_local i32* @ITOZ(%struct.inode*) #1

declare dso_local i32* @ITOZSB(%struct.inode*) #1

declare dso_local i32 @ZFS_ENTER(i32*) #1

declare dso_local i32 @ZFS_VERIFY_ZP(i32*) #1

declare dso_local i32 @zfs_getacl(i32*, i32*, i32, i32*) #1

declare dso_local i32 @ZFS_EXIT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
